docs: log Phase 2 and Phase 3 in changelog